--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,9 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run script
+      env:
+        EUSKALMET_API_EMAIL: ${{secrets.EUSKALMET_API_EMAIL}}
+        EUSKALMET_API_PRIVATE_KEY: ${{secrets.EUSKALMET_API_PRIVATE_KEY}}
       run: |
         python main.py
     - uses: stefanzweifel/git-auto-commit-action@v5
