--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,34 +5,31 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 permissions:
   contents: read
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run script
-      env:
-        EUSKALMET_API_EMAIL: ${{secrets.EUSKALMET_API_EMAIL}}
-        EUSKALMET_API_PRIVATE_KEY: ${{secrets.EUSKALMET_API_PRIVATE_KEY}}
-      run: |
-        python main.py
-    - uses: stefanzweifel/git-auto-commit-action@v5
-        
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Run script
+        env:
+          EUSKALMET_API_EMAIL: ${{secrets.EUSKALMET_API_EMAIL}}
+          EUSKALMET_API_PRIVATE_KEY: ${{secrets.EUSKALMET_API_PRIVATE_KEY}}
+        run: |
+          python main.py
+      - uses: stefanzweifel/git-auto-commit-action@v5
