--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,6 +8,8 @@ on:
     branches: ['main']
   pull_request:
     branches: ['main']
+  schedule:
+  - cron: "0 6,12,16,20 * * *"    
 
 permissions:
   contents: read
